Moving from direct integration with DynamoDB to Lambda
Lesson learned, if you need to deal with DDB just use a function so you can handle the marshalling and unmarshalliung of DDB items
